test/files/neg/t6476-bad-esc-c.scala

// supplemental warning should not supplement later error
class Test {
  def f = s"abc\"
  def g = "xyz
}
